--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "babel-plugin-react-compiler": "^1.0.0",
     "framer-motion": "^12.26.1",
     "lenis": "^1.3.17",
