vercel url data fetch problem

--- a/vercel.json
+++ b/vercel.json
@@ -1,23 +1,17 @@
 {
   "version": 2,
-  "builds": [
+  "rewrites": [
     {
-      "src": "client/package.json",
-      "use": "@vercel/next"
+      "source": "/api/(.*)",
+      "destination": "api/index.js"
     },
     {
-      "src": "api/index.js",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "api/index.js"
+      "source": "/health",
+      "destination": "api/index.js"
     },
     {
-      "src": "/(.*)",
-      "dest": "client/$1"
+      "source": "/((?!api/).*)",
+      "destination": "/client/$1"
     }
   ]
 }
