--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,27 @@
 {
   "version": 2,
-  "rewrites": [
+  "builds": [
     {
-      "source": "/api/(.*)",
-      "destination": "api/index.js"
+      "src": "client/package.json",
+      "use": "@vercel/next"
     },
     {
-      "source": "/((?!api/).*)",
-      "destination": "/client/$1"
+      "src": "api/index.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "api/index.js"
+    },
+    {
+      "handle": "filesystem"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "client/$1",
+      "check": true
     }
   ]
 }
